[package]
name = "wasmbox-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient-authority = "0.0.1"
anyhow = "1.0.57"
bincode = "1.3.3"
cap-primitives = "0.24.3"
cap-std = "0.24.3"
rand_chacha = { version="0.3.1", features=["serde1"] }
rand_core = "0.6.3"
serde = "1.0.137"
wasi-common = "0.37.0"
wasmtime = "0.37.0"
wasmtime-wasi = "0.37.0"
