[package]
name = "wasmbox-host"
version = "0.1.0"
edition = "2021"

[dependencies]
ambient-authority = "0.0.1"
anyhow = "1.0.57"
bincode = "1.3.3"
cap-primitives = "0.26.1"
cap-std = "0.26.1"
rand_chacha = { version="0.3.1", features=["serde1"] }
rand_core = "0.6.3"
serde = "1.0.137"
wasi-common = "2.0.1"
wasmtime = "2.0.1"
wasmtime-wasi = "2.0.1"
