[package]
name = "wasmbox"
version = "0.1.1"
edition = "2021"
description = "Serialize arbitrary running Rust code using WebAssembly"
repository = "https://github.com/drifting-in-space/wasmbox"
license = "MIT"
keywords = ["webassembly"]

[dependencies]
async-trait = "0.1.53"
bincode = "1.3.3"
serde = "1.0.137"
wasmbox-macro = {version = "0.1.0", path="./wasmbox-macro"}

[dev-dependencies]
anyhow = "1.0.57"
wasmbox-host = {path="../wasmbox-host"}
