[package]
name = "wasmbox-macro"
version = "0.1.1"
edition = "2021"
description = "Macro implementation for wasmbox"
repository = "https://github.com/drifting-in-space/wasmbox"
license = "MIT"
keywords = ["webassembly"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.14"
syn = {version="1.0.85", features=["full"]}
